only making the first example file visible

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ PDBs/
 !PDBs/CCU_GCU_10frames.mdcrd
 !PDBs/CCU_CGU.pdb
 /zfshomes/lperez/summer2025/pypure/G34_CCU_Hbonding_matrices_gen.py
-/zfshomes/lperez/summer2025/pypure/utilities
-!/zfshomes/lperez/summer2025/pypure/utilities/G34_CCU_Hbonding_matrices_gen
+utilities/
+!utilities/G34_CCU_Hbonding_matrices_gen
 
