--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ PDBs/
 !PDBs/CCU_GCU_10frames.mdcrd
 !PDBs/CCU_GCU_10frames.mdcrd
 !PDBs/CCU_CGU.pdb
-/zfshomes/lperez/summer2025/pypure/G34_CCU_Hbonding_matrices_gen.py
-utilities/*
+utilities/
 !utilities/G34_CCU_Hbonding_matrices_gen.py
 
