adding clusteirng for marc to take a look

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ utilities/*
 !utilities/G34_CCU_Hbonding_matrices_gen.py
 !utilities/t_a_Manipulation.py
 !utilities/Convenience.py
-
+!utilities/Clustering.py
 
