--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@ PDBs/*
 !PDBs/CCU_GCU_10frames.mdcrd
 !PDBs/5JUP_N2_GCU_nowat.prmtop
 utilities/*
-!utilities/G34_CCU_Hbonding_matrices_gen.py
-!utilities/t_a_Manipulation.py
-!utilities/Convenience.py
-!utilities/Clustering.py
+!utilities/Analysis.py
+!utilities/Data_gen_hbond.py
 PDZ_analysis.py
 test_systems/*
 test_output/*
