officially on pyPI!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mdsa-tools"
-version = "0.1.0"
+version = "0.1.3"
 description = "The Weir Labs H-bond Systems Analyses modules!"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -30,7 +30,22 @@ classifiers = [
 ]
 
 [tool.setuptools]
-include-package-data = true
+include-package-data = false
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["mdsa_tools"]
+exclude = [
+  "Tests*",
+  "examples*",
+  "luis_working*",
+  "manuscript_explorations*",
+  "build*",
+  "dist*",
+  "utilities*",
+  "test_output*",
+  "compresserz*",
+  "PDBs*",
+  "figures*",
+  "environments*",
+  "__pycache__*",
+]
