exploring umap embedding space and adding quickstar tto readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mdsa-tools"
-version = "0.1.3"
+version = "1.0.2"
 description = "The Weir Labs H-bond Systems Analyses modules!"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
   { name = "Luis Perez", email = "lperez@wesleyan.edu" }
@@ -19,7 +19,7 @@ dependencies = [
   "matplotlib",
   "seaborn",
   "scikit-learn",
-  "mdtraj==1.10.3",
+  "mdtraj<=1.10.3",
   "umap-learn",
   "python-circos"
 ]
@@ -29,11 +29,12 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 
+
 [tool.setuptools]
-include-package-data = false
+include-package-data = true
 
 [tool.setuptools.packages.find]
-where = ["mdsa_tools"]
+where = ["."]
 exclude = [
   "Tests*",
   "examples*",
@@ -41,7 +42,6 @@ exclude = [
   "manuscript_explorations*",
   "build*",
   "dist*",
-  "utilities*",
   "test_output*",
   "compresserz*",
   "PDBs*",
